# YCAppTool

./: .gitignore  README.md  build.gradle  debug.gradle  gradle.properties  lifeHelper.jks  log_depend.txt  settings.gradle  sign.properties  url.properties  yc.gradle
AidlClient/: build.gradle
AidlService/: build.gradle
AppCommon/: build.gradle
AppDesign/: build.gradle
AppGrpc/: build.gradle
AppHardware/: build.gradle
AppHardware/libs/: wx_pos_jni_1.0.66_release.aar
AppHelper/: build.gradle
AppJni/: build.gradle
AppLeet/: build.gradle
AppMonitor/: build.gradle
AppMvx/: build.gradle
AppPlayer/: build.gradle
AppServer/: build.gradle
AppTest/: build.gradle
AppTool/: .gitignore  build.gradle
AppWebView/: build.gradle
AppWidget/: build.gradle
AptHelper/AppInitCommon/: build.gradle
AptHelper/BuildTimeCostPlugin/: README.md  build.gradle
AptHelper/MethodTimePlugin/: README.md  build.gradle
AptHelper/RouteAnnotations/: build.gradle
AptHelper/RouteCompiler/: build.gradle
AptHelper/RouteManager/: .gitignore  README.md  build.gradle
AptHelper/ServiceLoaderAnnotations/: build.gradle
AptHelper/ServiceLoaderApi/: README.md  build.gradle
AptHelper/ServiceLoaderPlugin/: build.gradle
AptHelper/ServiceLoaderProcessor/: build.gradle
AptHelper/ServiceLoaderRegistry/: build.gradle
AptHelper/api-compiler/: build.gradle
AptHelper/api-manager/: build.gradle
AptHelper/api-plugin/: .gitignore  build.gradle  local.properties
Basis/CommonLayer/: build.gradle
Business/AndroidBusiness/: build.gradle
Business/AnimBusiness/: build.gradle
Business/AppHelper/: build.gradle
Business/AppLeet/: build.gradle
Business/AppWebView/: build.gradle
Business/BleBusiness/: build.gradle
Business/BusinessInterface/: build.gradle
Business/CommonBusiness/: build.gradle
Business/ConfigLayer/: build.gradle
Business/DemoBusiness/: build.gradle
Business/DesignBusiness/: build.gradle
Business/GameBusiness/: build.gradle
Business/GankBusiness/: build.gradle
Business/JetpackBusiness/: build.gradle
Business/KotlinBusiness/: build.gradle
Business/LeetBusiness/: build.gradle
Business/LibraryLayer/: build.gradle
Business/MusicBusiness/: build.gradle
Business/MvcTodoBusiness/: build.gradle
Business/MvpTodoBusiness/: build.gradle  proguard-rules.pro
Business/MvvmDatabinding/: .gitignore  build.gradle  proguard-rules.pro
Business/MvvmTodoLive/: .gitignore  build.gradle
Business/NotifyBusiness/: build.gradle
Business/OkHttpBusiness/: build.gradle
Business/PlayerBusiness/: build.gradle  proguard-rules.pro
Business/SocketBusiness/: build.gradle
Business/StatusBusiness/: build.gradle
Business/ThreadBusiness/: README.md  build.gradle
Business/VideoBusiness/: build.gradle
Business/WidgetBusiness/: build.gradle
Common/AppStatusLib/: build.gradle
Common/LibraryLayer/: build.gradle
Common/ToolUtilsLib/: .gitignore  build.gradle
CommonLib/: README.md
CommonLib/ActivityManager/: README.md  build.gradle
CommonLib/AppBaseStore/: README.md  build.gradle  gradle.properties  proguard-rules.pro
CommonLib/AppCallStatus/: README.md
CommonLib/AppCommon/: build.gradle
CommonLib/AppCommonInter/: README.md
CommonLib/AppCompress/: README.md  README.txt
CommonLib/AppContextLib/: README.md
CommonLib/AppEncryptLib/: README.md
CommonLib/AppFastSp/: README.md  build.gradle
CommonLib/AppGrayLib/: README.md
CommonLib/AppHandlerLib/: README.md
CommonLib/AppInitApi/: README.md  build.gradle
CommonLib/AppInitCompiler/: build.gradle
CommonLib/AppLogLib/: README.md  build.gradle
CommonLib/AppLruCache/: README.md
CommonLib/AppLruDisk/: README.md  build.gradle
CommonLib/AppMediaStore/: README.md  build.gradle
CommonLib/AppPermission/: README.md  build.gradle
CommonLib/AppRestartLIb/: README.md  build.gradle
CommonLib/AppScreenLib/: README.md
CommonLib/AppStartLib/: README.md  build.gradle
JniNdkLib/CrashDumper/src/main/cpp/: CMakeLists.txt  crash_dumper.cpp  readelf.cpp  stack_tracer.h
JniNdkLib/TestJniLib/src/main/cpp/: CMakeLists.txt  testjnic.c  testjnic.h  testjnilib.cpp  testjnilib.h
JniNdkLib/UVCCameraLib/src/main/jni/libuvc/: CMakeLists.txt  README.md  changelog.txt  doxygen.conf  libuvcConfig.cmake.in  libuvcConfigVersion.cmake.in
JniNdkLib/UVCCameraLib/src/main/jni/libuvc/android/jni/: Android.mk
JniNdkLib/UVCCameraLib/src/main/jni/libuvc/cameras/: isight_imac.txt  isight_macbook.txt  ms_lifecam_show.txt  quickcampro9000.txt  quickcampro9000_builtin_ctrls.txt  quickcampro9000_extra_ctrls.txt
JniNdkLib/UVCCameraLib/src/main/jni/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_config.h.in  libuvc_internal.h  libuvc_internal_original.h  libuvc_original.h
JniNdkLib/UVCCameraLib/src/main/jni/libuvc/src/: ctrl.c  ctrl_original.c  device.c  device_original.c  diag.c  diag_original.c  example.c  frame-mjpeg.c  frame.c  frame_original.c  init.c  init_original.c  stream.c  stream_original.c  test.c
LiveDataBus/: build.gradle
MmapLog/: build.gradle
MmapLog/src/main/cpp/: AsyncFileFlush.cpp  AsyncFileFlush.h  CMakeLists.txt  FlushBuffer.cpp  FlushBuffer.h  LogBuffer.cpp  LogBuffer.h  LogBufferHeader.cpp  LogBufferHeader.h  log4a-lib.cpp
MonitorLib/: README.md
PlayerApp/: build.gradle
PrivacyMonitor/: build.gradle
Read/: README.md  README_ME.md  WEEKLY.md
ReadAndroidWiki/: text
ToolLib/: README.md
WidgetLib/: README.md
android/: build.gradle
api/: build.gradle  proguard-rules.pro
api-manager/: build.gradle
api-plugin/: build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
book/: build.gradle
buildScript/: appBuild.gradle  debug.gradle  flavorBuild.gradle  jacoco.gradle  publish.gradle  signing.gradle
douban/: build.gradle
gank/: build.gradle
love/: build.gradle
md/: 01.为何组件化.md  02.组件化概念.md  03.组件化框架.md  05.组件化案例.md  07.选择合适路由.md  09.组件间通信.md  10.组件单独测试.md  13.组件化参考.md
music/: build.gradle
news/: build.gradle
note/: build.gradle
other/: build.gradle
todo/: build.gradle
video/: build.gradle
zhiHu/: build.gradle
(+11237 files in other folders)
